# agent-smith-lite-rs

./: .gitignore  Cargo.toml  README.md  agent_smith_lite.uuid
.github/workflows/: ci.yml  release.yml
src/: connection.rs  main.rs  monitor.rs  parser.rs  phoenix.rs
